<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="bottom"
    tools:context="com.example.yaro.myapp.ChampStatsActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/best_scorers"
        android:background="@drawable/champ_scorers_button"
        android:id="@+id/button6"
        android:onClick="showScorers"
        android:layout_marginTop="15dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/best_assists"
        android:onClick="showScorers"
        android:id="@+id/button7"
        android:layout_below="@+id/button6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/assists_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/most_valuable"
        android:onClick="showScorers"
        android:id="@+id/button8"
        android:layout_below="@+id/button7"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/best_players_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/safe_keepers"
        android:onClick="showScorers"
        android:id="@+id/button9"
        android:layout_below="@+id/button8"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/safe_keepers_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/champ_table"
        android:onClick="tableButton"
        android:id="@+id/button10"
        android:layout_marginTop="15dp"
        android:background="@drawable/champ_table_button"
        android:layout_above="@+id/button6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_matches"
        android:id="@+id/button11"
        android:onClick="matchesButton"
        android:background="@drawable/all_matches_button"
        android:layout_above="@+id/button10"
        android:layout_marginTop="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/button10"
        android:layout_alignEnd="@+id/button10" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/champ_difference"
        android:id="@+id/button12"
        android:onClick="graphsButton"
        android:background="@drawable/diff_button"
        android:layout_above="@+id/button11"
        android:layout_marginTop="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/button11"
        android:layout_alignEnd="@+id/button11" />

</RelativeLayout>
