<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.example.yaro.myapp.TeamActivity">



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points_graph"
        android:id="@+id/button14"
        android:onClick="graphsButton"
        android:background="@drawable/points_button"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/button3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allMatches"
        android:onClick="showSchedule"
        android:id="@+id/button3"
        android:background="@drawable/coming_matches"
        android:layout_above="@+id/button4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/best_scorers"
        android:onClick="showScorersPopupMenu"
        android:id="@+id/button4"
        android:background="@drawable/team_scorers"
        android:layout_above="@+id/button5"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_player"
        android:onClick="showPlayersPopupMenu"
        android:id="@+id/button5"
        android:background="@drawable/choosing_player_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/week_difference"
        android:id="@+id/button13"
        android:onClick="diffButton"
        android:background="@drawable/team_diff_button"
        android:layout_above="@+id/button14"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/button14"
        android:layout_alignEnd="@+id/button14" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keepers_comparison"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:onClick="pieChartButton"
        android:background="@drawable/keepers_button"
        android:id="@+id/button15"
        android:layout_above="@+id/button13"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/button14"
        android:layout_alignEnd="@+id/button14" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_stats"
        android:id="@+id/button17"
        android:onClick="statsButton"
        android:background="@drawable/stats_button"
        android:layout_above="@+id/button15"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/button15"
        android:layout_alignEnd="@+id/button15" />


</RelativeLayout>
